--- a/src/app/modules/dashboard/components/generic-table/generic-table.component.html
+++ b/src/app/modules/dashboard/components/generic-table/generic-table.component.html
@@ -1,16 +1,21 @@
 <div class="adaptable-container" [ngClass]="{'auto': tableData?.reqStatus > 1 }">
+
+    <!-- loader -->
     <div class="loading-shade" [hidden]="tableData?.reqStatus > 1">
         <mat-spinner></mat-spinner>
     </div>
 
     <table mat-table [dataSource]="dataSource" matSort [ngClass]="{'reduced-padding': reducedPadding}">
-        <ng-container *ngFor="let column of displayedColumns">
+        <ng-container *ngFor="let column of displayedColumns; let colIndex = index">
             <ng-container [matColumnDef]="column.name">
+
+                <!-- column name -->
                 <th mat-header-cell *matHeaderCellDef mat-sort-header
                     [ngClass]="column.textAlign ? column.textAlign + '-align' : 'left-align'">
                     {{ column.title }}
                 </th>
 
+                <!-- column value -->
                 <td mat-cell *matCellDef="let element" [style.width.vw]="column.maxWidthColumn && column.maxWidthColumn"
                     [style.text-align]="column.textAlign ? column.textAlign : 'left'">
                     <!-- with empty line -->
@@ -112,15 +117,37 @@
                         </ng-container>
                     </div>
                 </td>
+
+                <!-- column total -->
+                <td mat-footer-cell *matFooterCellDef [style.text-align]="column.textAlign ? column.textAlign : 'left'">
+                    <div class="font-weight-bold">
+                        <span *ngIf="colIndex === 0">{{ 'others.total' | translate | titlecase }}</span>
+
+                        <div *ngIf="colIndex > 0" [ngSwitch]="column.formatValue">
+                            <span *ngSwitchCase="'currency'">
+                                {{ getTotal(column.name) | currency:'USD':'symbol-narrow':'1.2-2' }}
+                            </span>
+                            <span *ngSwitchCase="'decimal'">
+                                {{ getTotal(column.name) | number : '1.2-2' }}
+                            </span>
+                            <span *ngSwitchCase="'integer'">
+                                {{ getTotal(column.name) | number : '1.0-0' }}
+                            </span>
+                            <span *ngSwitchDefault></span>
+                        </div>
+                    </div>
+                </td>
             </ng-container>
         </ng-container>
 
+        <!-- no data or error message -->
         <ng-container matColumnDef="disclaimer">
-            <td mat-footer-cell *matFooterCellDef [attr.colspan]="displayedColumns?.length">
+            <td mat-footer-cell *matFooterCellDef [hidden]="tableData?.reqStatus < 2"
+                [attr.colspan]="displayedColumns?.length">
                 <div class="text-muted text-center" *ngIf="tableData?.reqStatus === 3">
                     {{ errorMsg }}
                 </div>
-                <div class="text-muted text-center" *ngIf="tableData?.data.length === 0 && tableData?.reqStatus !== 3">
+                <div class="text-muted text-center" *ngIf="tableData?.data.length === 0 && tableData?.reqStatus === 2">
                     {{ emptyDataMsg }}
                 </div>
             </td>
@@ -129,10 +156,10 @@
         <ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumnsHeaders"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumnsHeaders;"></tr>
+            <tr mat-footer-row
+                *matFooterRowDef="tableData?.reqStatus === 2 && tableData?.data?.length > 1 ? displayedColumnsHeaders : ['disclaimer']"
+                [hidden]="tableData?.data?.length === 1" class="example-second-footer-row"></tr>
         </ng-container>
-
-        <tr mat-footer-row *matFooterRowDef="['disclaimer']" class="example-second-footer-row"
-            [hidden]="tableData?.reqStatus <=1 || tableData?.data.length > 0"></tr>
     </table>
 </div>
 <mat-paginator class="paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
